--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-browserify": "~2.1.0",
     "grunt-autoprefixer": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
-    "debowerify": "~0.7.1"
+    "debowerify": "~0.7.1",
+    "jquery": "~2.1.1"
   }
 }
