--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-autoprefixer": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
     "debowerify": "~0.7.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "grunt-contrib-connect": "~0.8.0"
   }
 }
