--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "repository": "git@bitbucket.org:MrThunderfield/text-adventure-game.git",
   "author": "Daniel Dunderfelt",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "load-grunt-tasks": "~0.4.0",
-    "grunt-sass": "~0.12.1",
     "browserify": "~4.1.5",
-    "grunt-browserify": "~2.1.0",
-    "grunt-autoprefixer": "~0.7.3",
-    "grunt-contrib-watch": "~0.6.1",
     "debowerify": "~0.7.1",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~0.7.3",
+    "grunt-browserify": "~2.1.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-sass": "~0.12.1",
+    "grunt-webpack": "^1.0.7",
     "jquery": "~2.1.1",
-    "grunt-contrib-connect": "~0.8.0"
+    "load-grunt-tasks": "~0.4.0",
+    "webpack": "^1.3.1-beta6",
+    "webpack-dev-server": "^1.4.6"
   }
 }
