--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "devDependencies": {
     "browserify": "~4.1.5",
     "debowerify": "~0.7.1",
+    "expect.js": "^0.3.1",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~0.7.3",
     "grunt-browserify": "~2.1.0",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha": "^0.4.11",
     "grunt-sass": "~0.12.1",
     "grunt-webpack": "^1.0.7",
     "jquery": "~2.1.1",
