--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "load-grunt-tasks": "~0.4.0",
     "webpack": "^1.3.1-beta6",
     "webpack-dev-server": "^1.4.6"
+  },
+  "dependencies": {
+    "lodash": "^2.4.1"
   }
 }
