--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jquery": "~2.1.1",
     "load-grunt-tasks": "~0.4.0",
     "webpack": "^1.3.1-beta6",
-    "webpack-dev-server": "^1.4.6"
+    "webpack-dev-server": "^1.4.6",
+    "grunt-traceur": "~0.2.0"
   },
   "dependencies": {
     "lodash": "^2.4.1"
